# tripoli

./: .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  README.md  README.rst  building.html  coverage.cfg  design.html  dev.html  doc  docs.py  dotemacs.py  emacs-travis.mk  genindex.html  gh_pages  index.html  namespace.html  objects.inv  py-modindex.html  raw.html  repl  search.html  searchindex.js  setup.py  test  tripoli.html  usage.html
_modules/: emacs_raw.html  index.html  tripoli.html
_modules/tripoli/: decorators.html  namespace.html  util.html
_modules/tripoli/types/: alist.html  list.html
_sources/: design.rst.txt  dev.rst.txt  dev.txt  index.rst.txt  namespace.rst.txt  raw.rst.txt  tripoli.txt  usage.rst.txt  usage.txt
docs/: Makefile
docs/source/: building.rst  conf.py  design.rst  dev.rst  index.rst  namespace.rst  raw.rst  usage.rst
lib/: EmacsObject.c  EmacsObject.h  emacs-interface.c  emacs-interface.h  error.c  error.h  interface.c  interface.h  main.c  main.h  module.c  module.h  object.c  object.h  util.h
tripoli/: __init__.py  decorators.py  namespace.py  repl.py  util.py
tripoli/repl/: __init__.py
tripoli/test/: __init__.py  test_coerce.py  test_emacs.py  test_emacs_raw.py  test_namespace.py  test_usage.py
tripoli/types/: __init__.py  alist.py  list.py  mplist.py  plist.py
tripoli/types/test/: test_alist.py  test_list.py
tripoli_run/: __main__.py
tripoli_test/: __init__.py  test_emacs.py  test_namespace.py  test_usage.py
tripoli_tests/: __init__.py  test_coerce.py  test_list.py  test_mplist.py  test_place_or_symbol.py  test_plist.py
